# server/src/startup/routes.js
@@ -11,6 +11,9 @@ const auth = require("../routes/auth");
 const statisticsRouter = require("../routes/statistics");
 const acknowledgementRouter = require("../routes/acknowledgement");
 const storageRouter = require("../routes/storage");
+const productsRouter = require("../routes/products");
+const categoriesRouter = require("../routes/categories");
+
 const CSS_URL =
   "https://cdnjs.cloudflare.com/ajax/libs/swagger-ui/4.1.0/swagger-ui.min.css";
 module.exports = function (app) {
@@ -35,5 +38,7 @@ module.exports = function (app) {
   app.use(endpoints.STATISTICS, statisticsRouter);
   app.use(endpoints.STORAGE, storageRouter);
   app.use(endpoints.ACKNOWLEDGEMENT, acknowledgementRouter);
+  app.use(endpoints.PRODUCTS, productsRouter);
+  app.use(endpoints.CATEGORIES, categoriesRouter);
   app.use(error); //make sure this is the last route always
 };
